# asteroids_rust

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  main.rs  names.rs
src/helpers/: asteroid_data.rs  bitmask.rs  chat_command.rs  count_entities_with_marker.rs  create_asteroid.rs  create_asteroid_mesh.rs  create_bullet_mesh.rs  create_debris_mesh.rs  create_lives_left_mesh.rs  create_message.rs  create_player.rs  create_player_ship.rs  create_ship_debris.rs  create_ufo_mesh.rs  entity_types.rs  get_asteroid_radius.rs  get_indexes_with_marker.rs  get_lives_left.rs  get_player_id.rs  get_player_index.rs  insert_asteroid_into_world.rs  insert_asteroids_into_world.rs  insert_bullet_into_world.rs  mod.rs  names.rs  platform_firing_strategies.rs
src/systems/: collide_with_asteroids.rs  create_mesh.rs  create_player_mesh.rs  create_ship_debris.rs  draw.rs  draw_message.rs  handle_input.rs  handle_screen_edges.rs  mod.rs  update_acceleration.rs  update_mesh.rs  update_movement.rs  update_rotation.rs
src/systems/main/: activate_safe_bullets_system.rs  display_message.rs  draw_labels.rs  fire_bullet.rs  fire_bullets_from_platforms.rs  handle_bullets_hitting_asteroids.rs  handle_bullets_hitting_ships.rs  handle_chat_message_system.rs  handle_respawn.rs  increment_ticks_lived_system.rs  insert_asteroids.rs  level.rs  mod.rs  move_ufo_system.rs  play_asteroid_strategy_set_system.rs  play_explosion_sound_system.rs  play_gun_system.rs  play_random_firing_strategy_set_system.rs  play_reinforcements_sound_system.rs  play_ufo_firing_strategy_set_system.rs  render_hitboxes.rs  (+5 more)
(+5 files in other folders)
