[package]
name = "asteroids_rust"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bbecs = "0.1.6"
bbecs = { path = "../bbecs" }
eyre = "0.6.5"
ggez = "0.5.1"
strum = "0.20.0"
strum_macros = "0.20.1"
rand = "0.8.3"